	* Added supybot.nick.alternates, which allows a list of alternate
	nicks to try, in order, if the primary nick (supybot.nick) is
	taken.  Also added a nick-perturbation function that will change
	supybot.nick if there are no alternates or if they're all taken
	as well.  As a result, removed supybot.nickmods.
	
	* Changed ChannelLogger to log channels to logs/ChannelLogger,
	rather than simply logs.
	
	* Added the ChannelRelay plugin, to relay messages between two
	channels.  This might be useful for people who want to forward
	CVS update messages from one channel (such as #commits) to
	another.
	
	* Added Channel.mode, to set modes in the channel, Channel.limit,
	to set the channel limit, Channel.moderate and
	Channel.unmoderate, to set +m and -m, respectively, and
	Channel.key to set or unset the channel keyword.
	
	* Added a new plugin, Format, which offers several commands for
	formatting strings on IRC.  Moved several commands from to it
	from the Utilities plugin.
	
	* Improved the functionality of RSS.announce.  Calling it with
	no arguments now lists the currently announced feeds.  Removing
	feeds is done by specifying the --remove option.

	* Added a reconnect command to the Owner plugin.
	
	* Added aol and rainbow filters to the Filter plugin.
	
	* Added Nickometer plugin, a translation of Infobot's Nickometer.
	
	* Added multiple recipient support for notes.
	
	* Added BadWords.list, to list the bad words currently being
	censored by the bot.
	
	* Changed Misc.help to allow plugins to specify their own help,
	and added help for several of the more confusing plugins.
	
	* Added Dunno.stats, to return the number of dunnos in the
	database.
	
	* Added the Currency plugin, to perform currency conversions.

	* Added conf.supybot.plugins.Karma.allowSelfRating, which
	determines whether users are allowed to adjust the karma of their
	current nick.

	* Added --nolimit option to Misc.last, which causes it to return
	all matches that are in the history.
